--- a/samples/fe-demo/package.json
+++ b/samples/fe-demo/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "http-server"
+    "dev": "http-server",
     "test": "npx cypress open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.14.2"
+    "cypress": "^13.14.2",
+    "http-server": "^14.1.1"
   }
 }
